--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,12 @@ env:
     - DJANGO_VERSION=1.5.11
     - DJANGO_VERSION=1.6.8
     - DJANGO_VERSION=1.7.1
+matrix:
+  exclude:
+    - python: 3.3
+      env: DJANGO_VERSION=1.4.16
+    - python: 3.4
+      env: DJANGO_VERSION=1.4.16
 install:
     - pip install -q Django==$DJANGO_VERSION --use-mirrors
     - python setup.py -q install
