--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ env:
     - DJANGO_VERSION=1.7.1
 matrix:
   exclude:
+    - python: 2.6
+      env: DJANGO_VERSION=1.7.1
     - python: 3.3
       env: DJANGO_VERSION=1.4.16
     - python: 3.4
